--- a/SMRoomDatabaseSqlite/app/src/main/res/layout/activity_registro_continente.xml
+++ b/SMRoomDatabaseSqlite/app/src/main/res/layout/activity_registro_continente.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
+            android:textAlignment="center"
             android:text="NUEVO"
             android:textAppearance="?attr/textAppearanceHeadline5"
             android:layout_marginBottom="15dp"
