--- a/SMRoomDatabaseSqlite/app/src/main/res/navigation/nav_graph.xml
+++ b/SMRoomDatabaseSqlite/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.smroomdatabasesqlite.FirstFragment"
+        android:name="com.example.smroomdatabasesqlite.AnimalesFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_animales">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.example.smroomdatabasesqlite.SecondFragment"
+        android:name="com.example.smroomdatabasesqlite.ContinenteFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_continentes">
 
